--- a/distributions.html
+++ b/distributions.html
@@ -68,64 +68,142 @@
           <div class="col col--1-of-4 distro-contents">
             <h2>Contents</h2>
             <ul>
-              <li>Arch Linux</li>
-              <li>Backtrack</li>
-              <li>CentOS</li>
-              <li>Debian</li>
-              <li>Fedora</li>
-              <li>Gentoo</li>
-              <li>IPFire</li>
-              <li>Knoppix</li>
-              <li>LinuxMint</li>
-              <li>OpenBSD</li>
-              <li>pfSense</li>
-              <li>OpenSUSE</li>
-              <li>Sabayon</li>
-              <li>Serenity Linux</li>
-              <li>Slackware</li>
-              <li>Slitaz</li>
-              <li>Ubuntu</li>
-              <li>Unity Linux</li>
+              <li><a href="#arch">Arch Linux</a></li>
+              <li><a href="#centos">CentOS</a></li>
+              <li><a href="#debian">Debian</a></li>
+              <li><a href="#fedora">Fedora</a></li>
+              <li><a href="#gentoo">Gentoo</a></li>
+              <li><a href="#ipfire">IPFire</a></li>
+              <li><a href="#mint">LinuxMint</a></li>
+              <li><a href="#openbsd">OpenBSD</a></li>
+              <li><a href="#pfsense">pfSense</a></li>
+              <li><a href="#opensuse">OpenSUSE</a></li>
+              <li><a href="#sabayon">Sabayon</a></li>
+              <li><a href="#serenity">Serenity Linux</a></li>
+              <li><a href="#slackware">Slackware</a></li>
+              <li><a href="#ubuntu">Ubuntu</a></li>
+              <li><a href="#unitylinux">Unity Linux</a></li>
             </ul>
           </div>
           <div class="col col--3-of-4">
+            <h5>Note: </h5>All distros are updated 4 times daily unless said otherwise.
             <div id="arch" class="distro">
               <h3>Arch Linux</h3>
-              <h5>homepage:</h5><a href="http://archlinux.org">http://archlinux.org</a>
-              <div class="distro"> </div>
-              <h3>Backtrack</h3>
-              <div class="distro">   </div>
+              <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/archlinux/iso/latest/">http://mirror.clarkson.edu/archlinux/iso/latest/</a><br>
+              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/archlinux/">http://mirror.clarkson.edu/archlinux/</a><br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/archlinux<br><br>
+              <h5>Upstream Mirror: </h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
+              <h5>Homepage: </h5><a href="http://www.archilinux.org/">http://www.archilinux.org/</a>
+            </div>
+            <div id="centos" class="distro">
               <h3>CentOS (Official Mirror)</h3>
-              <div class="distro"> </div>
+              <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/centos/6/isos/">http://mirror.clarkson.edu/centos/6/isos/</a><br>
+              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/archlinux/">http://mirror.clarkson.edu/centos/</a><br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/centos<br><br>
+              <h5>Upstream Mirror: </h5><a href="http://privatemirror.chpc.utah.edu">privatemirror.chpc.utah.edu</a><br>
+              <h5>Homepage: </h5><a href="http://www.centos.org/">http://www.centos.org/</a>
+            </div>
+            <div id="debian" class="distro">
               <h3>Debian</h3>
-              <div class="distro"> </div>
+              <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/debian-cd/">http://mirror.clarkson.edu/debian-cd/</a><br>
+              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/debian/">http://mirror.clarkson.edu/debian/</a><br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/debian-cd<br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/debian<br><br>
+              <h5>Upstream Mirrors: </h5><a href="http://ftp.us.debian.org">ftp.us.debian.org</a> & <a href="http://cdimage.debian.org">cdimage.debian.org</a><br>
+              <h5>Homepage: </h5><a href="http://www.debian.org/">http://www.debian.org/</a>
+            </div>
+            <div id="fedora" class="distro">
               <h3>Fedora (Official Mirror)</h3>
-              <div class="distro"> </div>
+              <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/fedora/linux/releases/">http://mirror.clarkson.edu/fedora/linux/releases/</a><br>
+              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/fedora/linux/">http://mirror.clarkson.edu/fedora/linux/</a><br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/fedora<br><br>
+              <h5>Upstream Mirror: </h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
+              <h5>Homepage: </h5><a href="http://fedoraproject.org/">http://fedoraproject.org/</a>
+            </div>
+            <div id="gentoo" class="distro">
               <h3>Gentoo</h3>
-              <div class="distro"> </div>
+              <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/gentoo/releases/">http://mirror.clarkson.edu/archlinux/gentoo/releases/</a><br>
+              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/gentoo/">http://mirror.clarkson.edu/gentoo/</a><br> & <a href="http://mirror.clarkson.edu/gentoo-portage/"></a>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/gentoo<br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/gentoo-portage<br><br>
+              <h5>Upstream Mirror: </h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
+              <h5>Homepage: </h5><a href="http://www.gentoo.org/">http://www.gentoo.org/</a>
+            </div>
+            <div id="ipfire" class="distro">
               <h3>IPFire (Official Mirror)</h3>
-              <div class="distro"></div>
-              <h3>Knoppix</h3>
-              <div class="distro"></div>
+              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/ipfire/">http://mirror.clarkson.edu/ipfire/</a><br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/ipfire<br><br>
+              <h5>Upstream Mirror: </h5><a href="http://rsync.ipfire.org">rsync.ipfire.org</a><br>
+              <h5>Frequency of Updates: </h5>Hourly<br>
+              <h5>Homepage: </h5><a href="http://www.ipfire.org/">http://www.ipfire.org/</a>
+            </div>
+            <div id="mint" class="distro">
               <h3>LinuxMint</h3>
-              <div class="distro"></div>
+              <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/linuxmint/iso/">http://mirror.clarkson.edu/linuxmint/iso/</a><br>
+              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/linuxmint/">http://mirror.clarkson.edu/linuxmint/</a><br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/linuxmint-iso<br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/linuxmint-packages<br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/linuxmint-debian<br><br>
+              <h5>Upstream Mirror: </h5><a href="http://ftp.heanet.ie">ftp.heanet.ie</a> & <a href="http://packages.linuxmint.com">packages.linuxmint.com</a> & <a href="http://debian.linuxmint.com">debian.linuxmint.com</a><br>
+              <h5>Homepage: </h5><a href="http://www.linuxmint.com/">http://www.linuxmint.com/</a>
+            </div>
+            <div id="openbsd" class="distro">
               <h3>OpenBSD</h3>
-              <div class="distro"></div>
+              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/openbsd/">http://mirror.clarkson.edu/openbsd/</a><br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/openbsd<br><br>
+              <h5>Upstream Mirror: </h5><a href="http://mirror.gtlib.gatech.edu">mirror.gtlib.gatech.edu</a><br>
+              <h5>Homepage: </h5><a href="http://www.openbsd.org/">http://www.openbsd.org/</a>
+            </div>
+            <div id="pfsense" class="distro">
               <h3>pfSense</h3>
-              <div class="distro"></div>
+              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/pfsense/">http://mirror.clarkson.edu/pfsense/</a><br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/pfsense<br><br>
+              <h5>Upstream Mirror: </h5><a href="http://cvs.pfsense.org">cvs.pfsense.org</a><br>
+              <h5>Homepage: </h5><a href="http://www.pfsense.org/">http://www.pfsense.org/</a>
+            </div>
+            <div id="opensuse" class="distro">
               <h3>OpenSUSE</h3>
-              <div class="distro"></div>
+              <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/opensuse/distribution/">http://mirror.clarkson.edu/opensuse/distribution/</a><br>
+              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/opensuse/">http://mirror.clarkson.edu/opensuse/</a><br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/opensuse<br><br>
+              <h5>Upstream Mirror: </h5><a href="http://rsync.opensuse.org">rsync.opensuse.org</a><br>
+              <h5>Homepage: </h5><a href="http://www.opensuse.org/">http://www.opensuse.org/</a>
+            </div>
+            <div id="sabayon" class="distro">
               <h3>Sabayon (Official Mirror)</h3>
-              <div class="distro"></div>
+              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/sabayon/">http://mirror.clarkson.edu/sabayon/</a><br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/sabayon<br><br>
+              <h5>Upstream Mirror: </h5><a href="http://na.mirror.garr.it">na.mirror.garr.it</a><br>
+              <h5>Homepage: </h5><a href="http://sabayon.org/">http://sabayon.org/</a>
+            </div>
+            <div id="serenity" class="distro">
               <h3>Serenity Linux (Main Mirror)</h3>
-              <div class="distro"></div>
+              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/serenity">http://mirror.clarkson.edu/serenity</a><br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/serenity<br><br>
+              <h5>Homepage: </h5><a href="http://serenitylinux.org/">http://serenitylinux.org/</a>
+            </div>
+            <div id="slackware" class="distro">
               <h3>Slackware</h3>
-              <div class="distro"></div>
-              <h3>Slitaz (Official Mirror)</h3>
-              <div class="distro"></div>
+              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/slackware/">http://mirror.clarkson.edu/slackware/</a><br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/slackware<br><br>
+              <h5>Upstream Mirror: </h5><a href="http://mirror.gtlib.gatech.edu/">mirror.gtlib.gatech.edu</a><br>
+              <h5>Homepage: </h5><a href="http://www.slackware.com/">http://www.slackware.com/</a>
+            </div>
+            <div id="ubuntu" class="distro">
               <h3>Ubutnu (Official Mirror)</h3>
-              <div class="distro"></div>
+              <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/ubuntu-releases/">http://mirror.clarkson.edu/ubuntu-releases/</a><br>
+              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/ubuntu/">http://mirror.clarkson.edu/ubuntu/</a><br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/ubuntu-releases<br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/ubuntu<br><br>
+              <h5>Upstream Mirror: </h5><a href="http://us.releases.ubuntu.com">us.release.ubuntu.com</a> & <a href="http://us.archive.ubuntu.com">us.archive.ubuntu.com</a><br>
+              <h5>Homepage: </h5><a href="http://www.ubuntu.com/">http://www.ubuntu.com/</a>
+            </div>
+            <div id="unitylinux" class="distro">
               <h3>Unity Linux (Official Mirror)</h3>
+              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/unity/">http://mirror.clarkson.edu/unity/</a><br>
+              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/unity<br><br>
+              <h5>Upstream Mirror: </h5><a href="http://distro.ibiblio.org">distro.ibiblio.org</a><br>
+              <h5>Homepage: </h5><a href="http://unity-linux.org/">http://unity-linux.org/</a>
             </div>
           </div>
         </div>
