--- a/distributions.html
+++ b/distributions.html
@@ -83,127 +83,151 @@
               <li><a href="#slackware">Slackware</a></li>
               <li><a href="#ubuntu">Ubuntu</a></li>
               <li><a href="#unitylinux">Unity Linux</a></li>
+              <li><a href="#raspbian">Raspbian</a></li>
+              <li><a href="#voidlinux">Void Linux</a></li>
+              <li><a href="#parrotsec">Parrot Security OS</a></li>
             </ul>
           </div>
           <div class="col col--3-of-4">
-            <h5>Note: </h5>All distros are updated 4 times daily unless said otherwise.
+            <h5>Note:</h5>All distros are updated 4 times daily unless said otherwise.
             <div class="distro" id="arch">
               <h3>Arch Linux</h3>
-              <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/archlinux/iso/latest/">http://mirror.clarkson.edu/archlinux/iso/latest/</a><br>
-              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/archlinux/">http://mirror.clarkson.edu/archlinux/</a><br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/archlinux<br><br>
-              <h5>Upstream Mirror: </h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
-              <h5>Homepage: </h5><a href="http://www.archilinux.org/">http://www.archilinux.org/</a>
+              <h5>ISOs:</h5><a href="./archlinux/iso/latest/">http://mirror.clarkson.edu/archlinux/iso/latest/</a><br>
+              <h5>HTTP:</h5><a href="./archlinux/">http://mirror.clarkson.edu/archlinux/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/archlinux<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
+              <h5>Homepage:</h5><a href="http://www.archilinux.org/">http://www.archilinux.org/</a>
             </div>
             <div class="distro" id="centos">
               <h3>CentOS (Official Mirror)</h3>
-              <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/centos/6/isos/">http://mirror.clarkson.edu/centos/6/isos/</a><br>
-              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/archlinux/">http://mirror.clarkson.edu/centos/</a><br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/centos<br><br>
-              <h5>Upstream Mirror: </h5><a href="http://privatemirror.chpc.utah.edu">privatemirror.chpc.utah.edu</a><br>
-              <h5>Homepage: </h5><a href="http://www.centos.org/">http://www.centos.org/</a>
+              <h5>ISOs:</h5><a href="./centos/6/isos/">http://mirror.clarkson.edu/centos/6/isos/</a><br>
+              <h5>HTTP:</h5><a href="./centos/">http://mirror.clarkson.edu/centos/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/centos<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://privatemirror.chpc.utah.edu">privatemirror.chpc.utah.edu</a><br>
+              <h5>Homepage:</h5><a href="http://www.centos.org/">http://www.centos.org/</a>
             </div>
             <div class="distro" id="debian">
               <h3>Debian</h3>
-              <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/debian-cd/">http://mirror.clarkson.edu/debian-cd/</a><br>
-              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/debian/">http://mirror.clarkson.edu/debian/</a><br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/debian-cd<br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/debian<br><br>
-              <h5>Upstream Mirrors: </h5><a href="http://ftp.us.debian.org">ftp.us.debian.org</a> & <a href="http://cdimage.debian.org">cdimage.debian.org</a><br>
-              <h5>Homepage: </h5><a href="http://www.debian.org/">http://www.debian.org/</a>
+              <h5>ISOs:</h5><a href="./debian-cd/">http://mirror.clarkson.edu/debian-cd/</a><br>
+              <h5>HTTP:</h5><a href="./debian/">http://mirror.clarkson.edu/debian/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/debian-cd<br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/debian<br><br>
+              <h5>Upstream Mirrors:</h5><a href="http://ftp.us.debian.org">ftp.us.debian.org</a> &<a href="http://cdimage.debian.org">cdimage.debian.org</a><br>
+              <h5>Homepage:</h5><a href="http://www.debian.org/">http://www.debian.org/</a>
             </div>
             <div class="distro" id="fedora">
               <h3>Fedora (Official Mirror)</h3>
-              <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/fedora/linux/releases/">http://mirror.clarkson.edu/fedora/linux/releases/</a><br>
-              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/fedora/linux/">http://mirror.clarkson.edu/fedora/linux/</a><br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/fedora<br><br>
-              <h5>Upstream Mirror: </h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
-              <h5>Homepage: </h5><a href="http://fedoraproject.org/">http://fedoraproject.org/</a>
+              <h5>ISOs:</h5><a href="./fedora/linux/releases/">http://mirror.clarkson.edu/fedora/linux/releases/</a><br>
+              <h5>HTTP:</h5><a href="./fedora/linux/">http://mirror.clarkson.edu/fedora/linux/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/fedora<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
+              <h5>Homepage:</h5><a href="http://fedoraproject.org/">http://fedoraproject.org/</a>
             </div>
             <div class="distro" id="gentoo">
               <h3>Gentoo</h3>
-              <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/gentoo/releases/">http://mirror.clarkson.edu/archlinux/gentoo/releases/</a><br>
-              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/gentoo/">http://mirror.clarkson.edu/gentoo/</a><br> & <a href="http://mirror.clarkson.edu/gentoo-portage/"></a>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/gentoo<br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/gentoo-portage<br><br>
-              <h5>Upstream Mirror: </h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
-              <h5>Homepage: </h5><a href="http://www.gentoo.org/">http://www.gentoo.org/</a>
+              <h5>ISOs:</h5><a href="./gentoo/releases/">http://mirror.clarkson.edu/archlinux/gentoo/releases/</a><br>
+              <h5>HTTP:</h5><a href="./gentoo/">http://mirror.clarkson.edu/gentoo/</a> &<a href="./gentoo-portage/">http://mirror.clarkson.edu/gentoo-portage/</a>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/gentoo<br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/gentoo-portage<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
+              <h5>Homepage:</h5><a href="http://www.gentoo.org/">http://www.gentoo.org/</a>
             </div>
             <div class="distro" id="ipfire">
               <h3>IPFire (Official Mirror)</h3>
-              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/ipfire/">http://mirror.clarkson.edu/ipfire/</a><br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/ipfire<br><br>
-              <h5>Upstream Mirror: </h5><a href="http://rsync.ipfire.org">rsync.ipfire.org</a><br>
-              <h5>Frequency of Updates: </h5>Hourly<br>
-              <h5>Homepage: </h5><a href="http://www.ipfire.org/">http://www.ipfire.org/</a>
+              <h5>HTTP:</h5><a href="./ipfire/">http://mirror.clarkson.edu/ipfire/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/ipfire<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://rsync.ipfire.org">rsync.ipfire.org</a><br>
+              <h5>Frequency of Updates:</h5>Hourly<br>
+              <h5>Homepage:</h5><a href="http://www.ipfire.org/">http://www.ipfire.org/</a>
             </div>
             <div class="distro" id="mint">
               <h3>LinuxMint</h3>
-              <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/linuxmint/iso/">http://mirror.clarkson.edu/linuxmint/iso/</a><br>
-              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/linuxmint/">http://mirror.clarkson.edu/linuxmint/</a><br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/linuxmint-iso<br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/linuxmint-packages<br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/linuxmint-debian<br><br>
-              <h5>Upstream Mirror: </h5><a href="http://ftp.heanet.ie">ftp.heanet.ie</a> & <a href="http://packages.linuxmint.com">packages.linuxmint.com</a> & <a href="http://debian.linuxmint.com">debian.linuxmint.com</a><br>
-              <h5>Homepage: </h5><a href="http://www.linuxmint.com/">http://www.linuxmint.com/</a>
+              <h5>ISOs:</h5><a href="./linuxmint/iso/">http://mirror.clarkson.edu/linuxmint/iso/</a><br>
+              <h5>HTTP:</h5><a href="./linuxmint/">http://mirror.clarkson.edu/linuxmint/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/linuxmint-iso<br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/linuxmint-packages<br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/linuxmint-debian<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://ftp.heanet.ie">ftp.heanet.ie</a> &<a href="http://packages.linuxmint.com">packages.linuxmint.com</a> &<a href="http://debian.linuxmint.com">debian.linuxmint.com</a><br>
+              <h5>Homepage:</h5><a href="http://www.linuxmint.com/">http://www.linuxmint.com/</a>
             </div>
             <div class="distro" id="openbsd">
               <h3>OpenBSD</h3>
-              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/openbsd/">http://mirror.clarkson.edu/openbsd/</a><br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/openbsd<br><br>
-              <h5>Upstream Mirror: </h5><a href="http://mirror.gtlib.gatech.edu">mirror.gtlib.gatech.edu</a><br>
-              <h5>Homepage: </h5><a href="http://www.openbsd.org/">http://www.openbsd.org/</a>
+              <h5>HTTP:</h5><a href="./openbsd/">http://mirror.clarkson.edu/openbsd/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/openbsd<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirror.gtlib.gatech.edu">mirror.gtlib.gatech.edu</a><br>
+              <h5>Homepage:</h5><a href="http://www.openbsd.org/">http://www.openbsd.org/</a>
             </div>
             <div class="distro" id="pfsense">
               <h3>pfSense</h3>
-              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/pfsense/">http://mirror.clarkson.edu/pfsense/</a><br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/pfsense<br><br>
-              <h5>Upstream Mirror: </h5><a href="http://cvs.pfsense.org">cvs.pfsense.org</a><br>
-              <h5>Homepage: </h5><a href="http://www.pfsense.org/">http://www.pfsense.org/</a>
+              <h5>HTTP:</h5><a href="./pfsense/">http://mirror.clarkson.edu/pfsense/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/pfsense<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://cvs.pfsense.org">cvs.pfsense.org</a><br>
+              <h5>Homepage:</h5><a href="http://www.pfsense.org/">http://www.pfsense.org/</a>
             </div>
             <div class="distro" id="opensuse">
               <h3>OpenSUSE</h3>
-              <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/opensuse/distribution/">http://mirror.clarkson.edu/opensuse/distribution/</a><br>
-              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/opensuse/">http://mirror.clarkson.edu/opensuse/</a><br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/opensuse<br><br>
-              <h5>Upstream Mirror: </h5><a href="http://rsync.opensuse.org">rsync.opensuse.org</a><br>
-              <h5>Homepage: </h5><a href="http://www.opensuse.org/">http://www.opensuse.org/</a>
+              <h5>ISOs:</h5><a href="./opensuse/distribution/">http://mirror.clarkson.edu/opensuse/distribution/</a><br>
+              <h5>HTTP:</h5><a href="./opensuse/">http://mirror.clarkson.edu/opensuse/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/opensuse<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://rsync.opensuse.org">rsync.opensuse.org</a><br>
+              <h5>Homepage:</h5><a href="http://www.opensuse.org/">http://www.opensuse.org/</a>
             </div>
             <div class="distro" id="sabayon">
               <h3>Sabayon (Official Mirror)</h3>
-              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/sabayon/">http://mirror.clarkson.edu/sabayon/</a><br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/sabayon<br><br>
-              <h5>Upstream Mirror: </h5><a href="http://na.mirror.garr.it">na.mirror.garr.it</a><br>
-              <h5>Homepage: </h5><a href="http://sabayon.org/">http://sabayon.org/</a>
+              <h5>HTTP:</h5><a href="./sabayon/">http://mirror.clarkson.edu/sabayon/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/sabayon<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://na.mirror.garr.it">na.mirror.garr.it</a><br>
+              <h5>Homepage:</h5><a href="http://sabayon.org/">http://sabayon.org/</a>
             </div>
             <div class="distro" id="serenity">
               <h3>Serenity Linux (Main Mirror)</h3>
-              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/serenity">http://mirror.clarkson.edu/serenity</a><br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/serenity<br><br>
-              <h5>Homepage: </h5><a href="http://serenitylinux.org/">http://serenitylinux.org/</a>
+              <h5>HTTP:</h5><a href="./serenity">http://mirror.clarkson.edu/serenity</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/serenity<br><br>
+              <h5>Homepage:</h5><a href="http://serenitylinux.org/">http://serenitylinux.org/</a>
             </div>
             <div class="distro" id="slackware">
               <h3>Slackware</h3>
-              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/slackware/">http://mirror.clarkson.edu/slackware/</a><br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/slackware<br><br>
-              <h5>Upstream Mirror: </h5><a href="http://mirror.gtlib.gatech.edu/">mirror.gtlib.gatech.edu</a><br>
-              <h5>Homepage: </h5><a href="http://www.slackware.com/">http://www.slackware.com/</a>
+              <h5>HTTP:</h5><a href="./slackware/">http://mirror.clarkson.edu/slackware/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/slackware<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirror.gtlib.gatech.edu/">mirror.gtlib.gatech.edu</a><br>
+              <h5>Homepage:</h5><a href="http://www.slackware.com/">http://www.slackware.com/</a>
             </div>
             <div class="distro" id="ubuntu">
               <h3>Ubutnu (Official Mirror)</h3>
-              <h5>ISOs: </h5><a href="http://mirror.clarkson.edu/ubuntu-releases/">http://mirror.clarkson.edu/ubuntu-releases/</a><br>
-              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/ubuntu/">http://mirror.clarkson.edu/ubuntu/</a><br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/ubuntu-releases<br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/ubuntu<br><br>
-              <h5>Upstream Mirror: </h5><a href="http://us.releases.ubuntu.com">us.release.ubuntu.com</a> & <a href="http://us.archive.ubuntu.com">us.archive.ubuntu.com</a><br>
-              <h5>Homepage: </h5><a href="http://www.ubuntu.com/">http://www.ubuntu.com/</a>
+              <h5>ISOs:</h5><a href="./ubuntu-releases/">http://mirror.clarkson.edu/ubuntu-releases/</a><br>
+              <h5>HTTP:</h5><a href="./ubuntu/">http://mirror.clarkson.edu/ubuntu/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/ubuntu-releases<br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/ubuntu<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://us.releases.ubuntu.com">us.release.ubuntu.com</a> &<a href="http://us.archive.ubuntu.com">us.archive.ubuntu.com</a><br>
+              <h5>Homepage:</h5><a href="http://www.ubuntu.com/">http://www.ubuntu.com/</a>
             </div>
             <div class="distro" id="unitylinux">
               <h3>Unity Linux (Official Mirror)</h3>
-              <h5>HTTP: </h5><a href="http://mirror.clarkson.edu/unity/">http://mirror.clarkson.edu/unity/</a><br>
-              <h5>Rsync: </h5>rsync://mirror.clarkson.edu/unity<br><br>
-              <h5>Upstream Mirror: </h5><a href="http://distro.ibiblio.org">distro.ibiblio.org</a><br>
-              <h5>Homepage: </h5><a href="http://unity-linux.org/">http://unity-linux.org/</a>
+              <h5>HTTP:</h5><a href="./unity/">http://mirror.clarkson.edu/unity/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/unity<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://distro.ibiblio.org">distro.ibiblio.org</a><br>
+              <h5>Homepage:</h5><a href="http://unity-linux.org/">http://unity-linux.org/</a>
+            </div>
+            <div class="distro" id="raspbian">
+              <h3>Raspbian</h3>
+              <h5>HTTP:</h5><a href="./raspbian/">http://mirror.clarkson.edu/raspbian/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/raspbian<br><br>
+              <h5>Upstream Mirror:</h5><br>
+              <h5>Homepage:</h5><a href="https://www.raspbian.org/">https://www.raspbian.org/</a>
+            </div>
+            <div class="distro" id="voidlinux">
+              <h3>Void Linux</h3>
+              <h5>HTTP:</h5><a href="./VoidLinux/">http://mirror.clarkson.edu/VoidLinux/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/VoidLinux<br><br>
+              <h5>Upstream Mirror:</h5><br>
+              <h5>Homepage:</h5><a href="http://www.voidlinux.eu/">http://www.voidlinux.eu/</a>
+            </div>
+            <div class="distro" id="parrotsec">
+              <h3>Parrot Security OS</h3>
+              <h5>HTTP:</h5><a href="./parrot/">http://mirror.clarkson.edu/parrot/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/parrot<br><br>
+              <h5>Upstream Mirror:</h5><br>
+              <h5>Homepage:</h5><a href="https://www.parrotsec.org/">https://www.parrotsec.org/</a>
             </div>
           </div>
         </div>
