--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         </div>
         <hr>
         <div class="row mid">
-          <div class="col col--1-of-3"><a href="distributions.html"><img src="img/debian_logo.svg"></a>
+          <div class="col col--1-of-3">
+            <div class="img-container"><img src="img/debian_logo.svg"></div>
             <h2>Linux Distros</h2>
             <p>
               We host around 20 distributions including Debian, Ubuntu, Arch Linux, Linux Mint,
@@ -83,14 +84,16 @@
               day from upstream mirrors. Learn more on the <a href="distributions.html">Distributions</a> page.
             </p>
           </div>
-          <div class="col col--1-of-3"><a href="./gnu"><img src="img/gnu.svg"></a>
+          <div class="col col--1-of-3">
+            <div class="img-container"><img src="img/blender-plain.png"></div>
             <h2>GNU Software</h2>
             <p>
-              We also host a large quantity of software maintained by the GNU Project. you can
-              find it on the <a href="software.html">Software</a> page.
+              We also host a variety of software including Blender, GNU, Clonezilla, Cygwin, and many others. you can
+              find out more on the <a href="software.html">Software</a> page.
             </p>
           </div>
-          <div class="col col--1-of-3"><a href="./linux"><img src="img/tux.png"></a>
+          <div class="col col--1-of-3">
+            <div class="img-container"><img src="img/tux.png"></div>
             <h2>Linux Kernel</h2>
             <p>Versions of the Linux Kernel (Up to 4.5.X) can also be found on the <a href="software.html">Software</a>
               page, found in the same place is documentation and souce for the kernel.
