--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
           <div class="col col--1-of-3">
             <div class="img-container"><img src="img/tux.png"></div>
             <h2>Linux Kernel</h2>
-            <p>Versions of the Linux Kernel (Up to 4.5.X) can also be found on the <a href="software.html">Software</a>
+            <p>
+              Versions of the Linux Kernel can also be found on the <a href="software.html">Software</a>
               page, found in the same place is documentation and souce for the kernel.
-
             </p>
           </div>
         </div>
