--- a/software.html
+++ b/software.html
@@ -24,7 +24,7 @@
       	var foo = document.getElementById('navsoft');
       	foo.setAttribute("class", "current");
       };
-      
+
     </script>
   </head>
   <body>
@@ -167,7 +167,7 @@
               <h5>Homepage:</h5><a href="http://www.documentfoundation.org/">http://www.documentfoundation.org/</a>
             </section>
             <section id="vlc">
-              <h3>VLC</h3>
+              <h3>VLC (Official Mirror)</h3>
               <h5>HTTP:</h5><a href="./videolan/">http://mirror.clarkson.edu/videolan/</a><br>
               <h5>Frequency of Updates:</h5>12 times daily<br>
               <h5>Homepage:</h5><a href="https://www.videolan.org/index.html">https://www.videolan.org/index.html</a>
